--- a/HTML5 and CSS3 course/_css/estilo.css
+++ b/HTML5 and CSS3 course/_css/estilo.css
@@ -6,6 +6,14 @@
           background-color: whitesmoke;
           color: black;
      }
+     div#inteface {
+        width: 900px;
+        background-color: grey;
+        margin: 0px auto 0px auto;
+        box-shadow: 0px 0px 10px black;
+        padding: 10px;
+
+     }
      
      
      p {
@@ -16,6 +24,16 @@
      
      }
      
+     header#cabecalho img#icone{
+
+position: absolute;
+left: 1000px;
+top: 40px;
+
+     }
+     header#cabecalho {
+        
+     }
 /* FORMATAÇÃO DE IMAGENS COM LEGENDAS */
 
 figure.foto-legenda {
