--- a/HTML5 and CSS3 course/_css/estilo.css
+++ b/HTML5 and CSS3 course/_css/estilo.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
-
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Nandinagari&family=Roboto:wght@100&family=Titillium+Web:ital,wght@0,200;1,300;1,400&display=swap');
+@font-face {
+    font-family: 'Fonte logo';
+    src: url("../_fonts/bubblegum-sans-regular.otf");
+}
 /* */
      
      body {
@@ -36,7 +40,7 @@ top: 30px;
         background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 50px;
      }
      header#cabecalho h1 {
-        font-family: arial, sans-serif;
+        font-family: 'Fonte logo', sans-serif;
         font-size: 30px;
         color: #606060;
         text-shadow: 1px 1px 1px black;
@@ -44,7 +48,7 @@ top: 30px;
         
      }
      header#cabecalho h2 {
-        font-family: arial, sans-serif;
+        font-family: font-family: 'Titillium Web', sans-serif;
         font-size: 25px;
         color: #8888;
         text-shadow: 1px 1px 1px;
