--- a/HTML5 and CSS3 course/_css/estilo.css
+++ b/HTML5 and CSS3 course/_css/estilo.css
@@ -122,3 +122,25 @@ nav#Menu a {
 nav#Menu a:hover {
 color: white;
 }
+
+section#corpo {
+    display: block;
+    width: 520px;
+    float: left;
+    border-right: 1px solid #606060;
+    padding-right: 15px;
+}
+aside#lateral {
+    display: block;
+    width: 700px;
+    float: right;
+}
+
+footer#rodape {
+    clear: both;
+    border-top: 1px solid #606060;
+}
+
+footer#rodape p{
+    text-align: center;
+}
