--- a/HTML5 and CSS3 course/_css/estilo.css
+++ b/HTML5 and CSS3 course/_css/estilo.css
@@ -130,6 +130,20 @@ section#corpo {
     border-right: 1px solid #606060;
     padding-right: 15px;
 }
+
+table#tabelaspec {
+    border: 1px solid #606060;
+    border-spacing: 0px;
+    margin-left: auto;
+    margin-right: 0px;
+}
+
+table#tabelaspec td{
+
+    border: 1px solid #606060;
+    padding: 10px;
+    text-align: center;
+}
 aside#lateral {
     display: block;
     width: 700px;
